# bit

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: add.cpp  add.h  commit.cpp  commit.h  head.cpp  head.h  init.cpp  init.h  main.cpp  utils.cpp  utils.h
